--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
       <a-assets>
         <audio id="mySound" src="./Assets/african.mp3" preload="auto"></audio>
 
-        <img id="page2" src="./Assets/pages/AWRA1.jpg" />
-        <img id="page3" src="./Assets/pages/AWRA2.jpg" />
-        <img id="page4" src="./Assets/pages/AWRA3.jpg" />
-        <img id="page5" src="./Assets/pages/AWRA4.jpg" />
-        <img id="page6" src="./Assets/pages/AWRA5.jpg" />
-        <img id="page7" src="./Assets/pages/AWRA6.jpg" />
+        <img id="page2" src="./Assets/pages/creators.jpg" />
+        <img id="page3" src="./Assets/pages/content.jpg" />
+        <img id="page4" src="./Assets/pages/AWRA1.jpg" />
+        <img id="page5" src="./Assets/pages/AWRA2.jpg" />
+        <img id="page6" src="./Assets/pages/AWRA3.jpg" />
+        <img id="page7" src="./Assets/pages/AWRA4.jpg" />
+        <img id="page8" src="./Assets/pages/AWRA5.jpg" />
+        <img id="page9" src="./Assets/pages/AWRA6.jpg" />
       </a-assets>
 
       <a-nft
@@ -95,7 +97,7 @@
         </a-plane>
         <a-entity
           id="magazinePage"
-          geometry="primitive: plane; width: 100; height: 140"
+          geometry="primitive: plane; width: 200; height: 240"
           material="src: #page2"
           position="70 -30 -130"
           rotation="-90 0 0"
@@ -176,6 +178,8 @@
           "#page5",
           "#page6",
           "#page7",
+          "#page8",
+          "#page9",
         ];
         let currentPage = 0;
         const magazinePlane = document.getElementById("magazinePage");
